--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
 
                         <div>
                             <h3 class="contact__title">Call me</h3>
-                            <span class="contatc__subtitle">(+91) 7337040949</span>
+                            <span class="contatc__subtitle">(+91) XXXXX XXXXX</span>
                         </div>
                     </div>
 
@@ -707,7 +707,7 @@
                     </a>
                 </div>
             </div>
-            <p class="footer__copy">&#169; Sailu. All rights reserved.</p>
+            <p class="footer__copy">&#169; Prasanna. All rights reserved.</p>
         </div>
     </footer>
 
