--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <span class="section__subtitle">My Introduction</span>
 
                 <div class="about__container container grid">
-                    <img src="packages/images/my.JPG" alt="" class="about__img">
+                    <img src="packages/images/my.jpg" alt="" class="about__img">
                     <div class="about__data">
                         <p class="about__description">
                             Hello, I am Prasanna, a student currently studying at Kakinada Institute of Engineering and Technology (KIET). My passion lies in the fields of data science and web development.
