--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         </div> -->
 
                         <div class="about__buttons">
-                            <a download="" href="https://drive.google.com/file/d/1cNOPArphnGh36CArAFmCWKrzBp6kWcOC/view?usp=drive_lin" class="button button--flex">
+                            <a download="" href="#" class="button button--flex">
                                 Download CV<i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
