--- a/index.html
+++ b/index.html
@@ -153,11 +153,16 @@
                             </div>
                         </div> -->
 
-                        <div class="about__buttons">
-                            <a download="" href="#" class="button button--flex">
-                                Download CV<i class="uil uil-download-alt button__icon"></i>
-                            </a>
-                        </div>
+                        <div class="about__buttons"> 
+    <a 
+        href="https://raw.githubusercontent.com/velagashanmukh/Data-Analyst-Portfolio/main/picture/velaga_shanmukh_Resume.pdf" 
+        download="velaga_shanmukh_Resume.pdf" 
+        class="button button--flex"
+    >
+        Download CV
+        <i class="uil uil-download-alt button__icon"></i>
+    </a>
+</div>
                     </div>
                 </div>
             </section>
