--- a/index.html
+++ b/index.html
@@ -154,14 +154,16 @@
                         </div> -->
 
                         <div class="about__buttons"> 
+   <div class="about__buttons"> 
     <a 
-        href="https://raw.githubusercontent.com/velagashanmukh/Data-Analyst-Portfolio/main/picture/velaga_shanmukh_Resume.pdf" 
+        href="https://raw.githubusercontent.com/velagashanmukh/Data-Analyst-Portfolio/main/picture/velaga_shanmukh%20Resume.pdf" 
         download="velaga_shanmukh_Resume.pdf" 
         class="button button--flex"
     >
         Download CV
         <i class="uil uil-download-alt button__icon"></i>
     </a>
+</div>
 </div>
                     </div>
                 </div>
