--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                         <div class="about__buttons"> 
    <div class="about__buttons"> 
     <a 
-        href="https://raw.githubusercontent.com/velagashanmukh/Data-Analyst-Portfolio/main/picture/velaga_shanmukh%20Resume.pdf" 
-        download="velaga_shanmukh_Resume.pdf" 
+        href="https://raw.githubusercontent.com/velagashanmukh/Data-Analyst-Portfolio/main/picture/velaga_shanmukh Resume.pdf" 
+        download="velaga_shanmukh Resume.pdf" 
         class="button button--flex"
     >
         Download CV
