--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <div class="about__buttons"> 
    <div class="about__buttons"> 
     <a 
-        href="https://raw.githubusercontent.com/velagashanmukh/Data-Analyst-Portfolio/main/velaga_shanmukh Resume.pdf" 
+        href="https://github.com/velagashanmukh/Data-Analyst-Portfolio/edit/main/velaga_shanmukh Resume.pdf" 
         download="velaga_shanmukh Resume.pdf" 
         class="button button--flex"
     >
