--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                         <div class="about__buttons"> 
    <div class="about__buttons"> 
     <a 
-        href="https://drive.google.com/file/d/1mUnYmnFfVWbYL0xOtuonZx79UW2xls60/view?usp=drive_link" 
-        download="velaga_shanmukh Resume.pdf" 
+        href="https://drive.google.com/file/d/1g-pI8afqXC_XMTaG7rfsrja2YmdpFpad/view?usp=sharing" 
+        download="velaga_shanmukh .pdf" 
         class="button button--flex"
     >
         Download CV
