--- a/index.html
+++ b/index.html
@@ -232,6 +232,16 @@
                                         <h3 class="skills__name">MySQL</h3>
                                         <span class="skills__number">80%</span>
                                     </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__bank"></span>
+                                    </div>
+                               </div>
+                               <div class="skills__data">
+                                   <div class="skills__titles">
+                                       <h3 class="skills__name">MS-Excel</h3>
+                                       <span class="skills__number">40%</span>
+                                   </div>
+                                   <div class="skills__bar">
                                        <span class="skills__percentage skills__counter"></span>
                                    </div>
                                </div>
@@ -239,11 +249,11 @@
                         </div>
                     </div>
 
-                    <div>
+                    
                         <!--==================== SKILLS 3 ====================-->
                         <div class="skills__content skills__close">
                             <div class="skills__header">
-                               <i class="uil uil-brackets-curly skills__icon"></i>
+                                <i class="uil uil-money-bill skills__icon"></i>
                                <div>
                                    <h1 class="skills__title">Web Developement</h1>
                                </div>
